[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/fonts/new_theme.tres" type="Theme" id=1]
[ext_resource path="res://UI/LevelButton.gd" type="Script" id=3]
[ext_resource path="res://assets/buttons/level_selection/button_level_locked_normal.png" type="Texture" id=5]
[ext_resource path="res://assets/buttons/level_selection/button_level_comp_hover.png" type="Texture" id=6]
[ext_resource path="res://assets/buttons/level_selection/button_level_comp_normal.png" type="Texture" id=7]
[ext_resource path="res://assets/buttons/level_selection/button_level_locked_hover.png" type="Texture" id=8]
[ext_resource path="res://assets/buttons/level_selection/button_level_uncomp_hover.png" type="Texture" id=9]
[ext_resource path="res://assets/buttons/level_selection/button_level_uncomp_normal.png" type="Texture" id=10]

[node name="LevelButton" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1200.0
margin_bottom = -640.0
rect_min_size = Vector2( 80, 80 )
mouse_filter = 1
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
completed_texture_normal = ExtResource( 7 )
completed_texture_hover = ExtResource( 6 )
uncompleted_texture_normal = ExtResource( 10 )
uncompleted_texture_hover = ExtResource( 9 )
locked_texture_normal = ExtResource( 5 )
locked_texture_hover = ExtResource( 8 )

[node name="TextureButton" type="TextureButton" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 80, 80 )
focus_mode = 0
theme = ExtResource( 1 )
enabled_focus_mode = 0
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonName" type="Label" parent="TextureButton"]
margin_right = 40.0
margin_bottom = 14.0
rect_min_size = Vector2( 80, 80 )
custom_colors/font_color = Color( 0.227451, 0.211765, 0.34902, 1 )
text = "1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
